# line-tracking

./: .gitignore  CMakeLists.txt  README.md  algorithm.c
src/: graphics.c  graphics.h  linetracking.h  main.c
tools/: extract_event_data.py
